[workspace]
members = [".", "leaflet", "examples/simple-map", "examples/with-server"]

[package]
name = "leptos-leaflet"
version = "0.1.0"
edition = "2021"

[dependencies]
leaflet = { path = "./leaflet" }
leptos = { git = "https://github.com/leptos-rs/leptos", default-features = false }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", default-features = false }
getrandom = { version="0.2", features=["js"] }
rand = "0.8"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = ["console", "HtmlElement", "HtmlDivElement"]

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
