[package]
name = "leptos-leaflet"
authors = ["Daniel Santana <danielgsantana@gmail.com>", "Artur Leao <artur.leao@gmail.com>", "Lewin Probst <info@emirror.de>"]
version = "0.6.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/headless-studio/leptos-leaflet"
description = "Leaflet components to use in Leptos."
readme = "../README.md"

[dependencies]
js-sys.workspace = true
leaflet.workspace = true
leptos = { workspace = true }
leptos_meta = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
paste.workspace = true
rand.workspace = true
regex.workspace = true
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
web-sys = { workspace = true, features = [
    "console",
    "HtmlElement",
    "HtmlDivElement",
] }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
