[package]
name = "leptos-leaflet"
authors = ["Daniel Santana <danielgsantana@gmail.com>", "Artur Leao <artur.leao@gmail.com>", "Lewin Probst <info@emirror.de>"]
version = "0.8.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/headless-studio/leptos-leaflet"
description = "Leaflet components to use in Leptos."
readme = "../README.md"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

leaflet = "0.4"
leptos = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }

paste = "1.0"
rand = "0.8"

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlElement",
    "HtmlDivElement",
] }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]