[package]
authors = [
    "Artur Leao <artur.leao@gmail.com>",
    "Daniel Santana <danielgsantana@gmail.com>",
    "Lewin Probst <info@emirror.de>",
]
description = "Leaflet components to use in Leptos."
edition = "2021"
license = "MIT"
name = "leptos-leaflet"
readme = "../README.md"
repository = "https://github.com/headless-studio/leptos-leaflet"
version = "0.10.0"

[dependencies]
js-sys = "0.3"

leaflet = "0.4"
leptos = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }

paste = "1.0"

serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlDivElement",
    "HtmlElement",
    "console",
] }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
