[package]
name = "pane-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", default-features = false, "features" = ["csr"] }
leptos-leaflet = { path = "../../leptos-leaflet", default-features = false, features = [
    "csr",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-web = "0.1.3"

web-sys = { version = "0.3", features = ["HtmlBodyElement"] }

[features]
csr = []
