[package]
name = "quad-tile-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8", default-features = false, "features" = [
    "csr",
] }
leptos-leaflet = { path = "../../leptos-leaflet", default-features = false, features = [
    "csr",
] }

web-sys = { version = "0.3", features = ["HtmlBodyElement"] }

[features]
csr = []