[package]
name = "simple-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.7.0-gamma", default-features = false, "features" = [
    "csr",
] }
leptos-leaflet = { path = "../../leptos-leaflet", default-features = false, features = [
    "csr",
] }

web-sys = { version = "0.3", features = ["HtmlBodyElement"] }

[patch.crates-io]
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "main" }

[features]
csr = []